--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "core-js": "^3.8.3",
     "jquey": "^0.0.1-security",
     "popper.js": "^1.16.1",
-    "vue": "^3.2.13",
-    "vuelidate": "^0.7.7"
+    "vue": "^2.6.14",
+    "vuelidate": "^0.7.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -24,7 +25,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
