--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
     "jquey": "^0.0.1-security",
     "popper.js": "^1.16.1",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
     "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
