--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/compat": "^3.1.0-0",
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "axios": "^0.27.2",
@@ -15,10 +16,9 @@
     "core-js": "^3.8.3",
     "jquey": "^0.0.1-security",
     "popper.js": "^1.16.1",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.4",
-    "vuelidate": "^0.7.7",
-    "vuex": "^3.6.2"
+    "router": "^1.3.7",
+    "vue": "^3.1.0-0",
+    "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,9 +26,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.1.0-0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
     "root": true,
