--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.16.1",
     "router": "^1.3.7",
     "vue": "^3.1.0-0",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
